ADded map details

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <!-- index.html -->
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3YRU6DFztkpmj_8PBtWkBdYK2Yg6061s&libraries=places"></script> -->
+
 
 
   <title>Your App</title>
