--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 
 
-  <title>Your App</title>
+  <title>Yupluck :: A Gym Solution</title>
 </head>
 <body>
   <div class="background-overlay"></div>
