changed home page design

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
   <!-- index.html -->
+  <link rel="icon" href="%PUBLIC_URL%/Original.png" />
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3YRU6DFztkpmj_8PBtWkBdYK2Yg6061s&libraries=places"></script> -->
 
 
